--- a/index.html
+++ b/index.html
@@ -14,6 +14,18 @@
     <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
-    <div class="animation-container"></div>
+    <div class="animation-container">
+        <div class="sun-container">
+            <div class="sun"></div>
+            <div class="sunlight1"></div>
+            <div class="sunlight2"></div>
+            <div class="sunlight3"></div>
+            <div class="sunlight4"></div>
+            <div class="sunlight5"></div>
+            <div class="sunlight6"></div>
+            <div class="sunlight7"></div>
+            <div class="sunlight8"></div>
+        </div>
+    </div>
 </body>
 </html>
