--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>wow! animation!</title>
     <link
       rel="stylesheet"
@@ -12,20 +12,49 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css" />
-</head>
-<body>
+  </head>
+  <body>
     <div class="animation-container">
-        <div class="sun-container">
-            <div class="sun"></div>
-            <div class="sunlight1"></div>
-            <div class="sunlight2"></div>
-            <div class="sunlight3"></div>
-            <div class="sunlight4"></div>
-            <div class="sunlight5"></div>
-            <div class="sunlight6"></div>
-            <div class="sunlight7"></div>
-            <div class="sunlight8"></div>
-        </div>
+      <div class="sun-container">
+        <div class="sun"></div>
+        <div class="sunlight1"></div>
+        <div class="sunlight2"></div>
+        <div class="sunlight3"></div>
+        <div class="sunlight4"></div>
+        <div class="sunlight5"></div>
+        <div class="sunlight6"></div>
+        <div class="sunlight7"></div>
+        <div class="sunlight8"></div>
+      </div>
+      <div class="grass-container">
+        <ul class="grass-all">
+          <li class="grass-item grass-height grass-anim1"></li>
+          <li class="grass-item grass-height1 grass-anim3"></li>
+          <li class="grass-item grass-height2 grass-anim4"></li>
+          <li class="grass-item grass-height4 grass-anim2"></li>
+          <li class="grass-item grass-height2 grass-anim3"></li>
+          <li class="grass-item grass-height1 grass-anim1"></li>
+          <li class="grass-item grass-height4 grass-anim4"></li>
+          <li class="grass-item grass-height2 grass-anim5"></li>
+          <li class="grass-item grass-height3 grass-anim3"></li>
+          <li class="grass-item grass-height grass-anim5"></li>
+          <li class="grass-item grass-height4 grass-anim1"></li>
+          <li class="grass-item grass-height1 grass-anim5"></li>
+          <li class="grass-item grass-height3 grass-anim2"></li>
+          <li class="grass-item grass-height1 grass-anim4"></li>
+          <li class="grass-item grass-height4 grass-anim3"></li>
+          <li class="grass-item grass-height3 grass-anim5"></li>
+          <li class="grass-item grass-height2 grass-anim2"></li>
+          <li class="grass-item grass-height3 grass-anim1"></li>
+          <li class="grass-item grass-height grass-anim4"></li>
+          <li class="grass-item grass-height1 grass-anim2"></li>
+          <li class="grass-item grass-height4 grass-anim5"></li>
+          <li class="grass-item grass-height grass-anim2"></li>
+          <li class="grass-item grass-height3 grass-anim4"></li>
+          <li class="grass-item grass-height grass-anim3"></li>
+          <li class="grass-item grass-height2 grass-anim1"></li>
+        </ul>
+      </div>
     </div>
-</body>
+  </body>
 </html>
