--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class="animation-container">
+      <h1>Hover over me</h1>
       <div class="sun-container">
         <div class="sun"></div>
         <div class="sunlight1"></div>
