--- a/index.html
+++ b/index.html
@@ -56,6 +56,12 @@
           <li class="grass-item grass-height2 grass-anim1"></li>
         </ul>
       </div>
+      <div class="vert-wood vert1"></div>
+      <div class="vert-wood vert2"></div>
+      <div class="vert-wood vert3"></div>
+      <div class="vert-wood vert4"></div>
+      <div class="vert-wood vert5"></div>
+      <div class="vert-wood vert6"></div>
     </div>
   </body>
 </html>
