--- a/index.html
+++ b/index.html
@@ -62,6 +62,9 @@
       <div class="vert-wood vert4"></div>
       <div class="vert-wood vert5"></div>
       <div class="vert-wood vert6"></div>
+      <div class="attic att1"></div>
+      <div class="attic att2"></div>
+      <div class="attic att3"></div>
     </div>
   </body>
 </html>
