--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
       referrerpolicy="no-referrer"
     />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="icon" type="image/ico" href="favicon.ico" />
   </head>
   <body>
     <div class="animation-container">
@@ -65,6 +66,8 @@
       <div class="attic att1"></div>
       <div class="attic att2"></div>
       <div class="attic att3"></div>
+      <div class="roof roof1"></div>
+      <div class="roof roof2"></div>
     </div>
   </body>
 </html>
