--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
       <div class="attic att3"></div>
       <div class="roof roof1"></div>
       <div class="roof roof2"></div>
+      <div class="door"></div>
     </div>
   </body>
 </html>
