--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
       <div class="roof roof1"></div>
       <div class="roof roof2"></div>
       <div class="door"></div>
+      <div class="window"></div>
     </div>
   </body>
 </html>
