--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="animation-container">
-      <h1>Hover over me</h1>
+      <h1>Hover over me<br>(or touch, whatever)</h1>
       <div class="sun-container">
         <div class="sun"></div>
         <div class="sunlight1"></div>
