--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
         <div class="sunlight7"></div>
         <div class="sunlight8"></div>
       </div>
+      <div class="moon-container"></div>
       <div class="grass-container">
         <ul class="grass-all">
           <li class="grass-item grass-height grass-anim1"></li>
@@ -70,6 +71,8 @@
       <div class="roof roof2"></div>
       <div class="door"></div>
       <div class="window"></div>
+      <div class="night-filter"></div>
     </div>
+    
   </body>
 </html>
