--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <div class="animation-container">
-      <h1>Hover over me<br>(or touch, whatever)</h1>
+      <h1>Hover over me<br />(or touch, whatever)</h1>
       <div class="sun-container">
         <div class="sun"></div>
         <div class="sunlight1"></div>
@@ -71,8 +71,7 @@
       <div class="roof roof2"></div>
       <div class="door"></div>
       <div class="window"></div>
-      <div class="night-filter"></div>
+      <div class="night-container"><div class="night-filter"></div></div>
     </div>
-    
   </body>
 </html>
