--- a/index.html
+++ b/index.html
@@ -28,7 +28,13 @@
         <div class="sunlight7"></div>
         <div class="sunlight8"></div>
       </div>
-      <div class="moon-container"></div>
+      <div class="moon-container">
+        <div class="halfmoons">
+          <div class="left-moon"></div>
+          <div class="right-moon"></div>
+          <div class="centre-moon"></div>
+        </div>
+      </div>
       <div class="grass-container">
         <ul class="grass-all">
           <li class="grass-item grass-height grass-anim1"></li>
